--- a/style/css/style.css
+++ b/style/css/style.css
@@ -2,8 +2,8 @@ table {
 
     margin-left: auto; 
     margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 100px;
+    margin-bottom: 150px;
 
 }
 
@@ -27,5 +27,10 @@ img {
 
     border-radius: 8px;
 
+}
 
+#flex-container {
+    display: flex;
+    margin-right: 500px;
+    margin-left: 300px;
 }
